# optimal-observables

./: .gitignore  README.md  calculate_observables.py  consistency_check_mg5.py  naive_reco.py  pyproject.toml  requirements.txt  ttbar_reconstruction.py
consistency_checks/: Cutflow.ipynb  EFT and SM.ipynb  Kinematics.ipynb  Observables.ipynb  Reconstruction.ipynb  SM Spin ON vs OFF.ipynb  consistency_checks.md  ctG Values.ipynb
docs/: docker-commands.md  event-generation.md
hep-docker/: Dockerfile  commands.md
optimal_observables/: calculate_observables.py  data.py  model.py  models.py  observables.py  train.py
plotting/: histos.py  ratio_histos.py
processing/: counts.py  event_selection.py  kinematics.py
reconstruct/: naive_reco.py  ttbar_dilepton.py
reconstruction_src/: naive_reco.py  ttbar_reconstruction.py
src/: explain.py  explain_nn_classifier.py  generate_features.py  reconstruct.py  train.py  train_nn.py  train_nn_classifier.py
src/hep-docker/: .dockerignore
src/hep-docker/eft-container/: Dockerfile
src/hep-docker/sm-container/: Dockerfile  install_python.sh
src/optimal_observables/: __init__.py  data.py  models.py  observables.py  train.py
src/optimal_observables/optimization/: classifier_config.py  data.py  explainers.py  models.py  observables.py
src/optimal_observables/plotting/: histos.py
src/optimal_observables/reconstruction/: event_selection.py  kinematics.py  ttbar_dilepton.py
src/plotting/: histos.py
src/processing/: counts.py  event_selection.py  kinematics.py
src/reconstruction/: naive.py  ttbar_dilepton.py
(+3 files in other folders)
