[tool.isort]
profile = "black"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "optimal_observables"
authors = [
    {name = "Carlos Miguel Patiño", email = "carlosmiguelpatino@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["version", "description"]

dependencies = [
    "awkward>=1.7.0",
    "jax>=0.2.26",
    "jaxlib>=0.3.0",
    "matplotlib>=3.5.1",
    "numpy>=1.20.3",
    "pytorch_lightning>=1.5.5",
    "rich>=10.16.0"
    "torch>=1.9.0",
    "torchmetrics>=0.6.1",
    "tqdm>=4.62.3",
    "uproot>=4.1.9",
]